# Machine-learning

./: .gitignore  pyproject.toml  requirements.txt
Exercises/: E01_sklearn.ipynb  E02_gradient_descent.ipynb  E03_Classification.ipynb  E04_Regularization.ipynb  codeAlong01.ipynb  codeAlong02.ipynb  codeAlong03.ipynb  codeAlong04.ipynb  codeAlong05.ipynb  digits.ipynb  fashion_mnist.ipynb  warmups.ipynb
Explorations/: CNN_test.ipynb  explore.ipynb  pytorch_explore.ipynb  regularisering.ipynb  version01.py
labb1/: EDA.ipynb  README.md  Rapport.ipynb  dashApp.py  prepare_data.py  recommender.py  requirements.txt  tmdb.py
labb1/assets/: style.css
labb1/ml-latest/: EDA.ipynb
labb2/: CNN_test.ipynb  Rapport.ipynb  cam.py
